# chess

./: CMakeLists.txt  README.md  build.sh  clean.sh  lldb.md  opengl_example.cpp  run.sh
include/engine/: board.hpp  piece.hpp  tile.hpp  utils.hpp
include/engine/pieces/: colour.hpp  piece.hpp
src/: CMakeLists.txt  main.cpp
src/engine/: board.cpp  board.hpp  board_init.cpp  pawn.cpp  piece.hpp  pieces.cpp  tile.cpp  util.cpp  utils.cpp
src/engine/pieces/: bishop.cpp  king.cpp  knight.cpp  pawn.cpp  queen.cpp  rook.cpp
